# on-marketing-assets-gen

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  run.py
agents/: agent.py
agents/assets_generator/: agent.py  callbacks.py  retry_agent.py  tools.py
agents/ideation/: agent.py  tools.py
agents/shared/: schemas.py
docs/: INSTAGRAM_POSTS_GENERATOR.md
mood_boards/: pants.md  sample_mood_board.md
sample_generations/: ideas.json
scripts/: build_product_index.py
tests/: test_state_handoff.py
